--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+  height: 100vh;
+  width: 100%;
+  background-color: #2F38FA;
+  margin: 0;
+  padding: 0;
 }
-
-.App-link {
-  color: #61dafb;
+.tag{
+  top: 0;
+  left: 0;
+  width: 28%;
+  height: 10vh;
+  color: #F0F5F8;
+  font-family: 'Roboto',sans-serif;
+  z-index: 1000;
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 40px;
+  padding-top: 20px;
+  align-items: center;
+  font-size: 14px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (min-width: 760px) and (max-width: 1024px) {
+  .tag{
+    width: 42%;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media only screen and (min-width: 360px) and (max-width: 760px) {
+  .tag{
+    width: 70%;
+    font-size: 12px;
   }
 }
